@@ -1,22 +1,14 @@
-# Etapa 1: Build
-FROM gradle:8.3-jdk-jammy AS builder
-WORKDIR /app
+FROM gradle:4.7.0-jdk8-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon 
 
-# Copiamos solo archivos de Gradle para cachear dependencias
-COPY build.gradle settings.gradle gradle.properties ./
-RUN gradle --no-daemon build || true
-
-# Copiamos el código fuente
-COPY src ./src
-
-# Build final del jar
-RUN gradle --no-daemon bootJar
-
-# Etapa 2: Runtime
-FROM eclipse-temurin:21-jdk-jammy
-WORKDIR /app
-
-COPY --from=builder /app/build/libs/*.jar app.jar
+FROM openjdk:8-jre-slim
 
 EXPOSE 8080
-CMD ["java", "-jar", "app.jar"]
+
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
